{{$NEXT}}

0.011     2015-08-13 20:43:37 EDT
  - Simplify Results refcounting
  - Pass undef instead of broken Results object to callback if statement
    prepare failed

0.010     2015-08-08 22:50:06 EDT
  - Create a tempdir for temporary databases
  - Use immediate locking for migrations instead of exclusive
  - Run query callbacks using next_tick instead of immediately
  - Don't call finish in Results destructor while other Results objects refer
    to the statement handle (GH #2)

0.009     2015-08-05 12:28:48 EDT
  - Simplify some code and examples with Mojo::Base::tap

0.008     2015-08-03 19:23:49 EDT
  - Use and recommend URI to portably parse filenames into URLs
  - Add from_filename method

0.007     2015-08-01 15:17:22 EDT
  - Clarify use of URLs in connection strings

0.006     2015-07-28 23:54:45 EDT
  - Fix results rows() method to return statement handle rows
  - Make scheme optional for from_string() (and thus the constructor)

0.005     2015-07-28 21:59:23 EDT
  - Allow specifying bind types for query parameters

0.004     2015-07-28 20:48:04 EDT
  - Depend on DBI explicitly
  - Remove List::Util dependency
  - Add blog example

0.003     2015-07-28 12:56:30 EDT
  - Minor migrations fixes

0.002     2015-07-28 12:39:12 EDT
  - Allow passing callback to query()

0.001     2015-07-28 02:48:42 EDT
  - First release